ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserUnfinishedTypeNameBeforeKeyword1/input.ts.stderr
error: Unexpected token `}`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserUnfinishedTypeNameBeforeKeyword1/input.ts:3:1
  |
3 | }
  | ^

error: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserUnfinishedTypeNameBeforeKeyword1/input.ts:2:8
  |
2 | module TypeModule2 {
  |        ^^^^^^^^^^^

